# whot

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  railway.json
.github/workflows/: ci.yml  deploy-pages.yml
deploy/: nginx.railway.conf.template  runtime-config.injected.js.template  start.sh
docs/: implementation-manual.md  project-structure.md
include/: Application.hpp
include/AI/: AIPlayer.hpp  DifficultyLevel.hpp  Strategy.hpp
include/Core/: Card.hpp  Deck.hpp  GameConstants.hpp  Hand.hpp  Player.hpp
include/Game/: ActionTypes.hpp  GameEngine.hpp  GameState.hpp  RuleEngine.hpp  ScoreCalculator.hpp  TurnManager.hpp
include/Network/: HTTPServer.hpp  MessageProtocol.hpp  SessionManager.hpp  WebSocketServer.hpp
include/Persistence/: Database.hpp  GameRepository.hpp  PlayerRepository.hpp
include/Rules/: NigerianRules.hpp
include/Utils/: JSONSerializer.hpp  Logger.hpp  Random.hpp  Validation.hpp
scripts/: clean_rebuild.sh  cmake-wrapper.sh
src/: Application.cpp  main.cpp
src/AI/: AIPlayer.cpp  DifficultyLevel.cpp  Strategy.cpp
src/Core/: Card.cpp  Deck.cpp  GameConstants.cpp  Hand.cpp  Player.cpp
src/Game/: GameEngine.cpp  GameState.cpp  RuleEngine.cpp  ScoreCalculator.cpp  TurnManager.cpp
src/Network/: HTTPServer.cpp  MessageProtocol.cpp  SessionManager.cpp  WebSocketServer.cpp
src/Persistence/: Database.cpp  GameRepository.cpp  PlayerRepository.cpp
src/Rules/: NigerianRules.cpp
src/Utils/: JSONSerializer.cpp  Logger.cpp  Random.cpp  Validation.cpp
tests/: TestBots.cpp  TestGameCode.cpp  TestGameplayFlows.cpp  TestHelpers.cpp  TestHelpers.hpp  TestIntegration.cpp  TestMain.cpp  TestStartGame.cpp
tests/AI/: TestAIPlayer.cpp  TestDifficultyLevel.cpp  TestStrategy.cpp
tests/Core/: TestCard.cpp  TestDeck.cpp  TestGameConstants.cpp  TestHand.cpp  TestPlayer.cpp
tests/Game/: TestGameEngine.cpp  TestGameState.cpp  TestRuleEngine.cpp  TestScoreCalculator.cpp  TestTurnManager.cpp
tests/Network/: TestHTTPServer.cpp  TestMessageProtocol.cpp  TestSessionManager.cpp  TestWebSocketServer.cpp
tests/Persistence/: TestDatabase.cpp  TestGameRepository.cpp  TestNameRepository.cpp  TestPlayerRepository.cpp
tests/Rules/: TestNigerianRules.cpp
tests/Utils/: TestJSONSerializer.cpp  TestLogger.cpp  TestRandom.cpp  TestValidation.cpp
web/: index.html
web/css/: style.css
web/js/: game.js  runtime-config.js
